# ThorlabsControl

./: DeviceList.py  Main.py  README.md  SerialTester.py  aduino.ino  basic_serial_arduino.py  pyproject.toml  requirements.txt  scan_plotter.py  serial_arduino.py  test_arduino.py  test_plot_arduino.py
config/: example_config.yaml
scripts/: run_demo.py
src/nanomax_control/: __init__.py  cli.py  coarse_stage.py  config.py  controller.py  nanotrak.py  sim.py
